@@ -1,6 +1,6 @@
 /*
  * SonarLint for IntelliJ IDEA
- * Copyright (C) 2015-2020 SonarSource
+ * Copyright (C) 2015-2021 SonarSource
  * sonarlint@sonarsource.com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,26 +19,33 @@
  */
 package org.sonarlint.intellij.core;
 
+import com.intellij.execution.process.OSProcessUtil;
 import com.intellij.openapi.application.PathManager;
+import com.intellij.openapi.util.SystemInfo;
+import com.intellij.util.PlatformUtils;
+
 import java.io.IOException;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.DirectoryStream;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import javax.annotation.CheckForNull;
+import org.jetbrains.annotations.NotNull;
 import org.sonarlint.intellij.SonarLintPlugin;
+import org.sonarlint.intellij.common.LanguageActivator;
+import org.sonarlint.intellij.module.ModulesRegistry;
 import org.sonarlint.intellij.util.GlobalLogOutput;
 import org.sonarlint.intellij.util.SonarLintUtils;
 import org.sonarsource.sonarlint.core.ConnectedSonarLintEngineImpl;
 import org.sonarsource.sonarlint.core.StandaloneSonarLintEngineImpl;
+import org.sonarsource.sonarlint.core.client.api.common.AbstractGlobalConfiguration;
 import org.sonarsource.sonarlint.core.client.api.common.Language;
 import org.sonarsource.sonarlint.core.client.api.common.LogOutput;
 import org.sonarsource.sonarlint.core.client.api.connected.ConnectedGlobalConfiguration;
@@ -46,40 +53,49 @@ import org.sonarsource.sonarlint.core.client.api.connected.ConnectedSonarLintEng
 import org.sonarsource.sonarlint.core.client.api.standalone.StandaloneGlobalConfiguration;
 import org.sonarsource.sonarlint.core.client.api.standalone.StandaloneSonarLintEngine;
 
-public class SonarLintEngineFactory  {
+public class SonarLintEngineFactory {
 
-  private static final Language[] STANDALONE_LANGUAGES = {
-    Language.HTML,
-    Language.JAVA,
+  private static final Set<Language> STANDALONE_LANGUAGES = EnumSet.of(Language.HTML,
     Language.JS,
     Language.KOTLIN,
     Language.PHP,
     Language.PYTHON,
     Language.RUBY,
-    Language.TS
-  };
+    Language.SECRETS,
+    Language.TS);
 
-  private static final Language[] CONNECTED_ADDITIONAL_LANGUAGES = {
+  private static final Set<Language> CONNECTED_ADDITIONAL_LANGUAGES = EnumSet.of(
     Language.SCALA,
     Language.SWIFT,
-    Language.XML
-  };
+    Language.XML);
 
+  ConnectedSonarLintEngine createEngine(String connectionId) {
+    Set<Language> enabledLanguages = EnumSet.copyOf(STANDALONE_LANGUAGES);
+    enabledLanguages.addAll(CONNECTED_ADDITIONAL_LANGUAGES);
 
-  ConnectedSonarLintEngine createEngine(String serverId) {
-    GlobalLogOutput globalLogOutput = SonarLintUtils.getService(GlobalLogOutput.class);
-    ConnectedGlobalConfiguration config = ConnectedGlobalConfiguration.builder()
-      .setLogOutput(globalLogOutput)
-      .setSonarLintUserHome(getSonarLintHome())
-      .addEnabledLanguages(STANDALONE_LANGUAGES)
-      .addEnabledLanguages(CONNECTED_ADDITIONAL_LANGUAGES)
-      .setExtraProperties(prepareExtraProps())
-      .setWorkDir(getWorkDir())
-      .setServerId(serverId)
-      .build();
+    amendEnabledLanguages(enabledLanguages);
 
-    // it will also start it
-    return new ConnectedSonarLintEngineImpl(config);
+    ModulesRegistry modulesRegistry = SonarLintUtils.getService(ModulesRegistry.class);
+
+    ConnectedGlobalConfiguration.Builder configBuilder = ConnectedGlobalConfiguration.builder()
+      .addEnabledLanguages(enabledLanguages.toArray(new Language[0]))
+      .setConnectionId(connectionId)
+      .setModulesProvider(() -> modulesRegistry.getModulesForEngine(connectionId));
+    configureCommonEngine(configBuilder);
+
+    URL cFamilyPluginUrl = findEmbeddedCFamilyPlugin(getPluginsDir());
+    if (cFamilyPluginUrl != null) {
+      configBuilder.useEmbeddedPlugin(Language.CPP.getPluginKey(), cFamilyPluginUrl);
+    }
+    URL secretsPluginUrl = findEmbeddedSecretsPlugin(getPluginsDir());
+    if (secretsPluginUrl != null) {
+      configBuilder.addExtraPlugin(Language.SECRETS.getPluginKey(), secretsPluginUrl);
+    }
+    URL csPluginUrl = findEmbeddedOmnisharpPlugin(getPluginsDir());
+    if (csPluginUrl != null) {
+      configBuilder.useEmbeddedPlugin(Language.CS.getPluginKey(), csPluginUrl);
+    }
+    return new ConnectedSonarLintEngineImpl(configBuilder.build());
   }
 
   StandaloneSonarLintEngine createEngine() {
@@ -91,19 +107,21 @@ public class SonarLintEngineFactory  {
     Thread.currentThread().setContextClassLoader(this.getClass().getClassLoader());
 
     try {
-      URL[] plugins = loadPlugins();
+      URL[] plugins = findEmbeddedPlugins();
 
-      GlobalLogOutput globalLogOutput = SonarLintUtils.getService(GlobalLogOutput.class);
-      StandaloneGlobalConfiguration globalConfiguration = StandaloneGlobalConfiguration.builder()
-        .setLogOutput(globalLogOutput)
-        .setSonarLintUserHome(getSonarLintHome())
-        .setWorkDir(getWorkDir())
+      Set<Language> enabledLanguages = EnumSet.copyOf(STANDALONE_LANGUAGES);
+
+      amendEnabledLanguages(enabledLanguages);
+
+      ModulesRegistry modulesRegistry = SonarLintUtils.getService(ModulesRegistry.class);
+
+      StandaloneGlobalConfiguration.Builder configBuilder = StandaloneGlobalConfiguration.builder()
         .addPlugins(plugins)
-        .addEnabledLanguages(STANDALONE_LANGUAGES)
-        .setExtraProperties(prepareExtraProps())
-        .build();
+        .addEnabledLanguages(enabledLanguages.toArray(new Language[0]))
+        .setModulesProvider(modulesRegistry::getStandaloneModules);
+      configureCommonEngine(configBuilder);
 
-      return new StandaloneSonarLintEngineImpl(globalConfiguration);
+      return new StandaloneSonarLintEngineImpl(configBuilder.build());
     } catch (Exception e) {
       throw new IllegalStateException(e);
     } finally {
@@ -111,46 +129,77 @@ public class SonarLintEngineFactory  {
     }
   }
 
-  private URL[] loadPlugins() throws IOException, URISyntaxException {
-    URL pluginsDir = this.getClass().getClassLoader().getResource("plugins");
-    if (pluginsDir == null) {
-      throw new IllegalStateException("Couldn't find plugins");
-    }
+  private static void configureCommonEngine(AbstractGlobalConfiguration.AbstractBuilder<?> builder) {
+    GlobalLogOutput globalLogOutput = SonarLintUtils.getService(GlobalLogOutput.class);
+    final NodeJsManager nodeJsManager = SonarLintUtils.getService(NodeJsManager.class);
+    builder
+      .setLogOutput(globalLogOutput)
+      .setSonarLintUserHome(getSonarLintHome())
+      .setWorkDir(getWorkDir())
+      .setExtraProperties(prepareExtraProps())
+      .setNodeJs(nodeJsManager.getNodeJsPath(), nodeJsManager.getNodeJsVersion())
+      .setClientPid(OSProcessUtil.getCurrentProcessId());
+  }
 
-    if ("file".equalsIgnoreCase(pluginsDir.toURI().getScheme())) {
-      return getPluginsUrls(pluginsDir);
-    } else {
-      return getPluginsUrlsWithFs(pluginsDir);
+  private static void amendEnabledLanguages(Set<Language> enabledLanguages) {
+    List<LanguageActivator> languageActivator = LanguageActivator.EP_NAME.getExtensionList();
+    languageActivator.forEach(l -> l.amendLanguages(enabledLanguages));
+  }
+
+  private static URL[] findEmbeddedPlugins() throws IOException {
+    return getPluginsUrls(getPluginsDir());
+  }
+
+  @NotNull
+  private static Path getPluginsDir() {
+    SonarLintPlugin plugin = SonarLintUtils.getService(SonarLintPlugin.class);
+    return plugin.getPath().resolve("plugins");
+  }
+
+  @CheckForNull
+  private static URL findEmbeddedPlugin(Path pluginsDir, String pluginNamePattern, String logPrefix) {
+    try {
+      List<URL> pluginsUrls = findFilesInDir(pluginsDir, pluginNamePattern, logPrefix);
+      if (pluginsUrls.size() > 1) {
+        throw new IllegalStateException("Multiple plugins found");
+      }
+      return pluginsUrls.size() == 1 ? pluginsUrls.get(0) : null;
+    } catch (Exception e) {
+      throw new IllegalStateException(e);
     }
   }
 
-  private URL[] getPluginsUrlsWithFs(URL pluginsDir) throws IOException, URISyntaxException {
-    Map<String, String> env = new HashMap<>();
-    env.put("create", "true");
-    try (FileSystem fs = FileSystems.newFileSystem(pluginsDir.toURI(), env)) {
-      return getPluginsUrls(pluginsDir);
-    }
+  @CheckForNull
+  private static URL findEmbeddedCFamilyPlugin(Path pluginsDir) {
+    return findEmbeddedPlugin(pluginsDir, "sonar-cfamily-plugin-*.jar", "Found CFamily plugin: ");
   }
 
-  private URL[] getPluginsUrls(URL pluginsDir) throws IOException, URISyntaxException {
+  @CheckForNull
+  private static URL findEmbeddedOmnisharpPlugin(Path pluginsDir) {
+    return findEmbeddedPlugin(pluginsDir, "sonarlint-omnisharp-plugin-*.jar", "Found CSharp plugin: ");
+  }
+
+  @CheckForNull
+  private static URL findEmbeddedSecretsPlugin(Path pluginsDir) {
+    return findEmbeddedPlugin(pluginsDir, "sonar-secrets-plugin-*.jar", "Found Secrets detection plugin: ");
+  }
+
+  private static URL[] getPluginsUrls(Path pluginsDir) throws IOException {
+    return findFilesInDir(pluginsDir, "*.jar", "Found plugin: ").toArray(new URL[0]);
+  }
+
+  private static List<URL> findFilesInDir(Path pluginsDir, String pattern, String logPrefix) throws IOException {
     List<URL> pluginsUrls = new ArrayList<>();
-
-    try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(Paths.get(pluginsDir.toURI()), "*.jar")) {
-      GlobalLogOutput globalLogOutput = SonarLintUtils.getService(GlobalLogOutput.class);
-      for (Path path : directoryStream) {
-        globalLogOutput.log("Found plugin: " + path.getFileName().toString(), LogOutput.Level.DEBUG);
-
-        URL newUrl;
-        if ("file".equalsIgnoreCase(pluginsDir.toURI().getScheme())) {
-          newUrl = path.toUri().toURL();
-        } else {
-          // any attempt to convert path directly to URL or URI will result in having spaces double escaped
-          newUrl = new URL(pluginsDir, path.toString());
+    if (Files.isDirectory(pluginsDir)) {
+      try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(pluginsDir, pattern)) {
+        GlobalLogOutput globalLogOutput = SonarLintUtils.getService(GlobalLogOutput.class);
+        for (Path path : directoryStream) {
+          globalLogOutput.log(logPrefix + path.getFileName().toString(), LogOutput.Level.DEBUG);
+          pluginsUrls.add(path.toUri().toURL());
         }
-        pluginsUrls.add(newUrl);
       }
     }
-    return pluginsUrls.toArray(new URL[0]);
+    return pluginsUrls;
   }
 
   private static Path getSonarLintHome() {
@@ -161,8 +210,28 @@ public class SonarLintEngineFactory  {
     return Paths.get(PathManager.getTempPath()).resolve("sonarlint");
   }
 
-  private Map<String, String> prepareExtraProps() {
+  private static Map<String, String> prepareExtraProps() {
     SonarLintPlugin plugin = SonarLintUtils.getService(SonarLintPlugin.class);
-    return Collections.singletonMap("sonar.typescript.internal.typescriptLocation", plugin.getPath().toString());
+    Map<String, String> extraProps = new HashMap<>();
+    extraProps.put("sonar.typescript.internal.typescriptLocation", plugin.getPath().toString());
+    if (PlatformUtils.isRider()) {
+      addOmnisharpServerPath(plugin, extraProps);
+    }
+    return extraProps;
+  }
+
+  private static void addOmnisharpServerPath(SonarLintPlugin plugin, Map<String, String> extraProps) {
+    String osDir;
+    if (SystemInfo.isWindows) {
+      osDir = "win";
+    } else if (SystemInfo.isMac) {
+      osDir = "osx";
+    } else if (SystemInfo.isLinux) {
+      osDir = "linux";
+    } else {
+      GlobalLogOutput.get().log("Unsupported platform for Omnisharp", LogOutput.Level.WARN);
+      return;
+    }
+    extraProps.put("sonar.cs.internal.omnisharpLocation", plugin.getPath().resolve("omnisharp").resolve(osDir).toString());
   }
 }
